# network-manager-wireguard

./: .gitignore  AUTHORS  COPYING  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  includes2strings.py  linker-script-binary.ver  network-manager-openvpn.doap  network-manager-wireguard.doap  nm-openvpn-service.conf  nm-openvpn-service.name.in  nm-wireguard-service.conf  nm-wireguard-service.name.in
appdata/: network-manager-openvpn.metainfo.xml.in  network-manager-wireguard.metainfo.xml.in
auth-dialog/: main.c  nm-openvpn-auth-dialog.py
examples/dbus/: dbus.py
m4/: compiler_options.m4
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  lv.po  mk.po  mr.po  nb.po  nl.po  pa.po  (+21 more)
properties/: auth-helpers.c  auth-helpers.h  gresource.xml  import-export.c  import-export.h  libnm-vpn-plugin-openvpn-editor.ver  libnm-vpn-plugin-wireguard-editor.ver  nm-openvpn-dialog.ui  nm-openvpn-editor-plugin.c  nm-openvpn-editor-plugin.h  nm-openvpn-editor.c  nm-openvpn-editor.h  nm-wireguard-dialog.ui  nm-wireguard-editor-plugin.c  nm-wireguard-editor-plugin.h  nm-wireguard-editor.c  nm-wireguard-editor.h
properties/tests/: test-import-export.c
properties/tests/conf/: device-notype.ovpn  device.ovpn  httpauthfile  iso885915.ovpn  keepalive.ovpn  keysize.ovpn  mtu-disc.ovpn  password.conf  ping-with-exit.ovpn  ping-with-restart.ovpn  pkcs12.ovpn  port.ovpn  proxy-http-with-auth.ovpn  proxy-http.ovpn  proxy-socks.ovpn  route.ovpn  rport.ovpn  static.ovpn  static2.ovpn  tls-inline-ca.pem  tls-inline-cert.pem  tls-inline-key.pem  tls-inline-ta.pem  tls-inline.ovpn  tls.ovpn  tls2.ovpn  tun-opts.conf
shared/: import-export.c  import-export.h  nm-default.h  nm-service-defines.h  utils.c  utils.h
shared/nm-utils/: nm-glib.h  nm-macros-internal.h  nm-shared-utils.c  nm-shared-utils.h  nm-test-utils.h
src/: nm-openvpn-service-openvpn-helper.c  nm-openvpn-service.c  nm-wireguard-service.c  readconfig.py
